// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu removes hidden state 1`] = `
<div>
  <div
    class="hc-c-menu hc-c-menu--open"
    id="hc-c-menu"
  >
    <ul
      class="hc-c-menu__links ds-c-list ds-c-list--bare"
    >
      <li
        class="ds-u-margin--0 "
      >
        <a
          class="hc-c-menu__link"
          href="#foo"
        >
          Foo
        </a>
      </li>
      <li
        class="ds-u-margin--0 "
      >
        <a
          class="hc-c-menu__link"
          href="#bar"
        >
          Bar
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu renders MenuList 1`] = `
<div>
  <div
    class="hc-c-menu"
    hidden=""
    id="hc-c-menu"
  >
    <ul
      class="hc-c-menu__links ds-c-list ds-c-list--bare"
    >
      <li
        class="ds-u-margin--0 "
      >
        <a
          class="hc-c-menu__link"
          href="#foo"
        >
          Foo
        </a>
      </li>
      <li
        class="ds-u-margin--0 "
      >
        <a
          class="hc-c-menu__link"
          href="#bar"
        >
          Bar
        </a>
      </li>
    </ul>
  </div>
</div>
`;
